--- a/po/main/de.po
+++ b/po/main/de.po
@@ -8,13 +8,13 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: SABnzbd-3.0.0-develop\n"
-"POT-Creation-Date: 2020-06-26 09:41+0000\n"
+"POT-Creation-Date: 2020-06-27 23:06+0200\n"
 "PO-Revision-Date: 2020-06-27 15:49+0000\n"
 "Last-Translator: Safihre <safihre@sabnzbd.org>, 2020\n"
 "Language-Team: German (https://www.transifex.com/sabnzbd/teams/111101/de/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
-"Content-Transfer-Encoding: 7bit\n"
+"Content-Transfer-Encoding: 8bit\n"
 "Generated-By: pygettext.py 1.5\n"
 "Language: de\n"
 "Plural-Forms: nplurals=2; plural=(n != 1);\n"
@@ -116,6 +116,73 @@ msgstr "Fehler"
 #: SABnzbd.py # sabnzbd/interface.py
 msgid "SABnzbd shutdown finished"
 msgstr "SABnzbd wurde beendet"
+
+#: sabnzbd/utils/servertests.py
+msgid "The hostname is not set."
+msgstr "Der Hostname wurde nicht angegeben"
+
+#: sabnzbd/utils/servertests.py
+msgid "There are no connections set. Please set at least one connection."
+msgstr ""
+"Keine Verbindungen angegeben. Bitte geben Sie mindestens eine Verbindung "
+"ein."
+
+#: sabnzbd/utils/servertests.py
+msgid "Password masked in ******, please re-enter"
+msgstr "Passwort ist als ****** maskiert. Bitte erneut eingeben."
+
+#: sabnzbd/utils/servertests.py
+msgid "Invalid server details"
+msgstr "Ungültige Server-Angaben"
+
+#: sabnzbd/utils/servertests.py
+msgid "Timed out: Try enabling SSL or connecting on a different port."
+msgstr ""
+"Zeitüberschreitung: Versuche es mit eingeschalteten SSL oder einen anderen "
+"Port."
+
+#: sabnzbd/utils/servertests.py
+msgid "Timed out"
+msgstr "Zeitüberschreitung"
+
+#: sabnzbd/utils/servertests.py
+msgid ""
+"Unknown SSL protocol: Try disabling SSL or connecting on a different port."
+msgstr ""
+"Unbekanntes SSL-Protokoll: SSL deaktivieren oder alternativen Port "
+"versuchen."
+
+#: sabnzbd/utils/servertests.py
+msgid "Invalid server address."
+msgstr "Ungültige Server-Adresse."
+
+#: sabnzbd/utils/servertests.py
+msgid "Server quit during login sequence."
+msgstr "Sever beendet beim Anmeldeverlauf."
+
+#: sabnzbd/utils/servertests.py
+msgid "Server requires username and password."
+msgstr "Server benötigt ein Benutzername und ein Passwort."
+
+#: sabnzbd/utils/servertests.py
+msgid "Connection Successful!"
+msgstr "Verbindung erfolgreich hergestellt!"
+
+#: sabnzbd/utils/servertests.py # sabnzbd/interface.py #
+#: sabnzbd/newswrapper.py
+msgid "Authentication failed, check username/password."
+msgstr ""
+"Authentifizierung fehlgeschlagen. Überprüfen Sie Benutzername und Passwort."
+
+#: sabnzbd/utils/servertests.py
+msgid "Too many connections, please pause downloading or try again later"
+msgstr ""
+"Zu viele Verbindungen. Bitte halten Sie die Downloads an oder versuchen Sie "
+"es später erneut."
+
+#: sabnzbd/utils/servertests.py
+msgid "Could not determine connection result (%s)"
+msgstr "Die Verbindung konnte nicht überprüft werden. (%s)"
 
 #: sabnzbd/__init__.py [Warning message]
 msgid "Signal %s caught, saving and exiting..."
@@ -582,12 +649,6 @@ msgid ""
 msgstr ""
 "Authentifizierung fehlt. Bitte Benutzernamen und Passwort aus "
 "Einstellungen->Allgemein in die externe Anwendung eingeben:"
-
-#: sabnzbd/interface.py # sabnzbd/newswrapper.py #
-#: sabnzbd/utils/servertests.py
-msgid "Authentication failed, check username/password."
-msgstr ""
-"Authentifizierung fehlgeschlagen. Überprüfen Sie Benutzername und Passwort."
 
 #: sabnzbd/interface.py
 msgid "Unsuccessful login attempt from %s"
@@ -4868,64 +4929,3 @@ msgstr "Ungültige NZB-Datei."
 #: sabnzbd/urlgrabber.py
 msgid "URL Fetching failed; %s"
 msgstr "Abrufen der URL fehlgeschlagen; %s"
-
-#: sabnzbd/utils/servertests.py
-msgid "The hostname is not set."
-msgstr "Der Hostname wurde nicht angegeben"
-
-#: sabnzbd/utils/servertests.py
-msgid "There are no connections set. Please set at least one connection."
-msgstr ""
-"Keine Verbindungen angegeben. Bitte geben Sie mindestens eine Verbindung "
-"ein."
-
-#: sabnzbd/utils/servertests.py
-msgid "Password masked in ******, please re-enter"
-msgstr "Passwort ist als ****** maskiert. Bitte erneut eingeben."
-
-#: sabnzbd/utils/servertests.py
-msgid "Invalid server details"
-msgstr "Ungültige Server-Angaben"
-
-#: sabnzbd/utils/servertests.py
-msgid "Timed out: Try enabling SSL or connecting on a different port."
-msgstr ""
-"Zeitüberschreitung: Versuche es mit eingeschalteten SSL oder einen anderen "
-"Port."
-
-#: sabnzbd/utils/servertests.py
-msgid "Timed out"
-msgstr "Zeitüberschreitung"
-
-#: sabnzbd/utils/servertests.py
-msgid ""
-"Unknown SSL protocol: Try disabling SSL or connecting on a different port."
-msgstr ""
-"Unbekanntes SSL-Protokoll: SSL deaktivieren oder alternativen Port "
-"versuchen."
-
-#: sabnzbd/utils/servertests.py
-msgid "Invalid server address."
-msgstr "Ungültige Server-Adresse."
-
-#: sabnzbd/utils/servertests.py
-msgid "Server quit during login sequence."
-msgstr "Sever beendet beim Anmeldeverlauf."
-
-#: sabnzbd/utils/servertests.py
-msgid "Server requires username and password."
-msgstr "Server benötigt ein Benutzername und ein Passwort."
-
-#: sabnzbd/utils/servertests.py
-msgid "Connection Successful!"
-msgstr "Verbindung erfolgreich hergestellt!"
-
-#: sabnzbd/utils/servertests.py
-msgid "Too many connections, please pause downloading or try again later"
-msgstr ""
-"Zu viele Verbindungen. Bitte halten Sie die Downloads an oder versuchen Sie "
-"es später erneut."
-
-#: sabnzbd/utils/servertests.py
-msgid "Could not determine connection result (%s)"
-msgstr "Die Verbindung konnte nicht überprüft werden. (%s)"
